// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service can work 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "service.Body": Object {
        "properties": Object {
          "name": Object {
            "type": "string",
          },
        },
        "required": Array [],
        "type": "object",
      },
      "service.Book": Object {
        "description": "An example resource type from AIP-123 used to test the behavior described in
the CreateBookRequest message.

See: https://google.aip.dev/123",
        "properties": Object {
          "id": Object {
            "description": "Output only. The book's ID.",
            "type": "string",
          },
          "name": Object {
            "description": "The resource name of the book.

Format: \`publishers/{publisher}/books/{book}\`

Example: \`publishers/1257894000000000000/books/my-book\`",
            "type": "string",
          },
        },
        "required": Array [],
        "type": "object",
      },
      "service.CreateBookRequest": Object {
        "description": "A standard Create message from AIP-133 with a user-specified ID.
The user-specified ID (the \`book_id\` field in this example) must become a
query parameter in the OpenAPI spec.

See: https://google.aip.dev/133#user-specified-ids",
        "properties": Object {
          "book": Object {
            "$ref": "#/components/schemas/service.Book",
          },
          "book_id": Object {
            "description": "The ID to use for the book.

This must start with an alphanumeric character.",
            "type": "string",
          },
          "parent": Object {
            "description": "The publisher in which to create the book.

Format: \`publishers/{publisher}\`

Example: \`publishers/1257894000000000000\`",
            "type": "string",
          },
        },
        "required": Array [],
        "type": "object",
      },
      "service.MessageWithBody": Object {
        "properties": Object {
          "data": Object {
            "$ref": "#/components/schemas/service.Body",
          },
          "id": Object {
            "type": "string",
          },
        },
        "required": Array [],
        "type": "object",
      },
    },
  },
  "info": Object {
    "description": "",
    "title": "service",
    "version": "1",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/service.ABitOfEverythingService/test": Object {
      "post": Object {
        "description": "",
        "operationId": "service.ABitOfEverythingService.test",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/components/schemas/service.CreateBookRequest",
              },
            },
          },
          "description": "A standard Create message from AIP-133 with a user-specified ID.
The user-specified ID (the \`book_id\` field in this example) must become a
query parameter in the OpenAPI spec.

See: https://google.aip.dev/133#user-specified-ids",
          "required": true,
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "*/*": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/service.MessageWithBody",
                },
              },
            },
            "description": "",
          },
        },
      },
    },
  },
}
`;

exports[`service swagger v2 1`] = `
Object {
  "definitions": Object {
    "service.Body": Object {
      "properties": Object {
        "name": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "service.Book": Object {
      "description": "An example resource type from AIP-123 used to test the behavior described in
the CreateBookRequest message.

See: https://google.aip.dev/123",
      "properties": Object {
        "id": Object {
          "description": "Output only. The book's ID.",
          "type": "string",
        },
        "name": Object {
          "description": "The resource name of the book.

Format: \`publishers/{publisher}/books/{book}\`

Example: \`publishers/1257894000000000000/books/my-book\`",
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "service.CreateBookRequest": Object {
      "description": "A standard Create message from AIP-133 with a user-specified ID.
The user-specified ID (the \`book_id\` field in this example) must become a
query parameter in the OpenAPI spec.

See: https://google.aip.dev/133#user-specified-ids",
      "properties": Object {
        "book": Object {
          "$ref": "#/definitions/service.Book",
          "description": "The book to create.",
        },
        "book_id": Object {
          "description": "The ID to use for the book.

This must start with an alphanumeric character.",
          "type": "string",
        },
        "parent": Object {
          "description": "The publisher in which to create the book.

Format: \`publishers/{publisher}\`

Example: \`publishers/1257894000000000000\`",
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "service.MessageWithBody": Object {
      "properties": Object {
        "data": Object {
          "$ref": "#/definitions/service.Body",
        },
        "id": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
  },
  "info": Object {
    "description": "",
    "title": "service",
    "version": "1",
  },
  "paths": Object {
    "/service.ABitOfEverythingService/test": Object {
      "post": Object {
        "description": "",
        "operationId": "service.ABitOfEverythingService.test",
        "parameters": Array [
          Object {
            "description": "A standard Create message from AIP-133 with a user-specified ID.
The user-specified ID (the \`book_id\` field in this example) must become a
query parameter in the OpenAPI spec.

See: https://google.aip.dev/133#user-specified-ids",
            "in": "body",
            "name": "body",
            "required": true,
            "schema": Object {
              "$ref": "#/definitions/service.CreateBookRequest",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "description": "",
            "schema": Object {
              "$ref": "#/definitions/service.MessageWithBody",
            },
          },
        },
      },
    },
  },
  "swagger": "2.0",
}
`;
